--- a/content/post/2023-10-28-vuepress.md
+++ b/content/post/2023-10-28-vuepress.md
@@ -1,5 +1,5 @@
 ---
-title: "vuepress-theme-hope"
+title: "基于vuepress-theme-hope的官网开发小记"
 subtitle: ""
 description: "基于vuepress-theme-hope，写出20+万star的开源组织的现代化官网。"
 date: 2023-10-28
@@ -9,9 +9,10 @@ tags: ["fe", "note"]
 categories: ["Tech"]
 ---
 
-利用本科最后一个学生身份参加了开源之夏，有幸参与到 dromara 官网的开发工作。以下为开发过程中的一些经验记录。
+利用本科最后一个学生身份参加了开源之夏，有幸参与到 dromara 官网的开发工作。由于比较熟悉 Vue，选择了 Vuepress 开发，主题为 vuepress-theme-hope。
+并使用 [VuePress Theme Hope](https://theme-hope.vuejs.press/zh/) 主题的 V2 版本构建。V2 基于 [_VuePress2_](https://vuejs.press/zh/)， 带有 [_Vite4_](https://cn.vitejs.dev/) / [_Webpack5_](https://webpack.docschina.org/) 和 [_Vue3_](https://cn.vuejs.org/) 的强大功能。以下为开发过程中的一些经验记录。
 
-## 在 VuePress 项目中使用 Vue 组件与 Vue 语法。
+## 1.在 VuePress 项目中使用 Vue 组件与 Vue 语法。
 
 由于组织对官网的美观有一定要求，官网开发之前就进行了很长时间的设计，然后发现 ai 设计功能还是不太行 hhh，最后去闲鱼找了一位设计师，效果就很好了。
 拿到设计图就会发现 vuepress-theme-hope 是由 frontmatter 关键词渲染生成的样式，设计图完全无法由内置的模块生成，就思考怎么使用 Vue 语法自己写。查阅文档后，项目中主要使用了两种方式：
@@ -118,7 +119,7 @@ import ProjectsPage from "@ProjectsPage";
 
 ```
 
-#### 2. 多语言方案
+## 2. 多语言方案
 
 由于上文把内置模块替换成 Vue 组件，会影响到多语言的实现。切换语言时，只有 md 的标题会变化，而 md 中使用的 Vue 组件需要找到方式联动。
 一开始想用主题提供的 api 引入变量，将来改东西直接在 md 文档改，内部自动映射过来。结果看了提供的 api，发现首页还是只能拿到用不了的那些模块。
@@ -158,7 +159,7 @@ watch(
 
 询问阿超前辈后，认为可以这么实现，维护还好，大概后续不会特别关注底层，于是使用了该方案，后续转换也很顺畅。
 
-#### 3. 通过插件拿到所有 frontmatter 信息
+## 3. 通过插件拿到所有 frontmatter 信息
 
 有个场景，想当用户点击新闻标签时，显示所有新闻的博客信息，包括标题、链接、作者、日期等，也就是自动拿到 src\zh\news 这个文件夹下所有 md 文档的 frontmatter，然后内部进行处理，最终显示在新闻标签页。自己翻框架文档没找到可实现的 api，在思考使用 Node.js 自己写工具，还是换其他方式时，决定去请教阿超前辈。
 阿超前辈通过 demo 展示了正确地使用框架内部插件的方式。我在项目里按照正确方式，运行很好。
@@ -186,5 +187,10 @@ const allPagesFrontmatter = siteData.value.frontmatter;
 
 就能获得 siteData.value.frontmatter，并做想要的转换。
 这样，只要在所有新闻的 md 中，增加相应的 frontmatter，就可以在新闻页全部拿到对应信息。
+
+## 4. hope 主题中使用 webpack
+
+曾经想用 webpack 的 gzip 压缩下代码、使用 cdn，但发现我的网站慢主要是因为使用 gh-pages 部署的，还是应该在这上面下功夫，但翻到的前人在 hope 主题中使用 webpack 的方式还是很有用，可以用 webpack 的各种插件、loader，所以一并贴出来。
+https://newzone.top/web/VuePress.html#%E6%97%B6%E9%97%B4%E5%8F%82%E6%95%B0
 
 完整代码可参考[仓库](https://github.com/Cicici-Shi/Cicici-Shi.github.io)，欢迎大家指教。
